--- a/src/peakrdl_python/templates/addrmap_field.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_field.py.jinja
@@ -85,7 +85,7 @@ class {{get_fully_qualified_type_name(node)}}_cls({%- if 'encode' in node.list_p
 
         This returns None:
         - if the field is not reset.
-        - if the register resets to a signal value tht can not be determined
+        - if the register resets to a signal value that can not be determined
         """
         int_default = super().default
 
