--- a/src/peakrdl_python/templates/addrmap_tb.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_tb.py.jinja
@@ -516,7 +516,8 @@ class {{top_node.type_name}}_TestCase(unittest.TestCase):
         {% endif -%}
         {%- endif %}
         {% endfor %}
-        with patch(__name__ + '.' + 'read_addr_space', return_value=rand_reg_value):
+        with patch(__name__ + '.' + 'write_addr_space') as write_callback_mock, \
+             patch(__name__ + '.' + 'read_addr_space', return_value=rand_reg_value) as read_callback_mock:
             # the read_fields method gets a dictionary back
             # from the object with all the read back field
             # values
@@ -527,8 +528,12 @@ class {{top_node.type_name}}_TestCase(unittest.TestCase):
                                       {%- endfor %}
                                     }
 
+            read_callback_mock.reset_mock()
+
             self.assertDictEqual(self.dut.{{'.'.join(get_python_path_segments(node))}}.read_fields(),
                                  reference_read_fields)
+            read_callback_mock.assert_called_once()
+            write_callback_mock.assert_not_called()
 
         {%- endif %}
         {%- endif %}
