Move the python module header to a seperate file to make it easier to customise

--- a/src/peakrdl_python/templates/addrmap.py.jinja
+++ b/src/peakrdl_python/templates/addrmap.py.jinja
@@ -1,8 +1,4 @@
-"""Python Wrapper for the {{top_node.inst_name}} register model
-
-This code was generated from the PeakRDL-python package
-
-"""
+{% include "header.py.jinja" with context %}
 {% if uses_enum %}from enum import IntEnum, unique{% endif %}
 from typing import Tuple
 from typing import Iterator
