--- a/src/peakrdl_python/templates/addrmap_tb.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_tb.py.jinja
@@ -1,8 +1,4 @@
-"""
-Unit Tests for the {{top_node.inst_name}} register model Python Wrapper
-
-This code was generated from the PeakRDL-python package
-"""
+{% include "header_tb.py.jinja" with context %}
 from array import array as Array
 import unittest
 from unittest.mock import patch, call
