--- a/src/peakrdl_python/templates/addrmap_register.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_register.py.jinja
@@ -77,6 +77,18 @@ class {{get_fully_qualified_type_name(node)}}_cls(RegWriteOnly):
         yield self.{{safe_node_name(child_node)}}
         {% endfor %}
 
+    {# context manager #}
+    {% if node.has_sw_writable %}
+    @contextmanager
+    def single_read_modify_write(self, verify:bool = False, skip_write: bool = False) -> Generator['{{get_fully_qualified_type_name(node)}}_cls', None, None]:
+        """
+        Context Manager to do multiple accesses using a single read/modify write operation
+        """
+        with super().single_read_modify_write(verify=verify, skip_write=skip_write) as reg:
+           yield reg
+    {% endif %}
+
+
     {% endif %}
 
     {% if node.has_sw_writable %}
