--- a/src/peakrdl_python/templates/addrmap_tb.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_tb.py.jinja
@@ -539,6 +539,70 @@ class {{top_node.type_name}}_TestCase(unittest.TestCase):
         {%- endif %}
         {%- endfor %}
 
+    def test_register_read_context_manager(self):
+        """
+        Walk the register map and check every register read_fields method
+        """
+        {%- for node in top_node.descendants(unroll=True) -%}
+        {%- if isinstance(node, systemrdlRegNode) %}
+        {% if node.has_sw_readable %}
+        # test context manager to register:
+        # {{'.'.join(node.get_path_segments())}}
+        # build up the register value with a random base value, overlaid with
+        # a random value for each field
+        rand_reg_value = random.randrange(0, {{get_reg_max_value_hex_string(node)}} + 1)
+        {%- for field in node.children() %}
+        {%- if field.is_sw_readable -%}
+        {%- if 'encode' in field.list_properties() %}
+        rand_field_value = random.choice(list(self.dut.{{'.'.join(get_python_path_segments(field))}}.enum_cls)).value
+        {%- else %}
+        rand_field_value = random.randrange(0, {{ get_field_max_value_hex_string(field) }} + 1)
+        {%- endif %}
+        {% if field.msb == field.high -%}
+        rand_reg_value = (rand_reg_value & {{get_field_inv_bitmask_hex_string(field)}}) | (rand_field_value << {{ field.low }})
+        {% else -%}
+        rand_reg_value = (rand_reg_value & {{get_field_inv_bitmask_hex_string(field)}}) | (self._reverse_bits(value=rand_field_value, number_bits={{field.width}}) << {{ field.low }})
+        {% endif -%}
+        {%- endif %}
+        {% endfor %}
+        with patch(__name__ + '.' + 'write_addr_space') as write_callback_mock, \
+             patch(__name__ + '.' + 'read_addr_space', return_value=rand_reg_value) as read_callback_mock:
+
+            # first read the fields using the "normal" method, then compare the result to reading
+            # via the context manager
+            reference_read_fields = { {% for field in node.children() -%}
+                                      {%- if field.is_sw_readable %}
+                                      '{{ field.inst_name }}' : self.dut.{{'.'.join(get_python_path_segments(field))}}.read(){%- if not loop.last -%}, {%- endif %}
+                                      {%- endif -%}
+                                      {%- endfor %}
+                                    }
+            read_callback_mock.reset_mock()
+
+            {% if node.has_sw_writable %}
+            with self.dut.{{'.'.join(get_python_path_segments(node))}}.single_read_modify_write(skip_write=True) as reg_context:
+            {% else %}
+            with self.dut.{{'.'.join(get_python_path_segments(node))}}.single_read() as reg_context:
+            {%- endif -%}
+                {% for field in node.children() -%}
+                {%- if field.is_sw_readable %}
+                self.assertEqual(reference_read_fields['{{ field.inst_name }}'],
+                                 reg_context.get_child_by_system_rdl_name('{{ field.inst_name }}').read())
+                {%- endif -%}
+                {%- endfor %}
+
+            read_callback_mock.assert_called_once()
+            write_callback_mock.assert_not_called()
+
+        {%- endif %}
+        {%- endif %}
+        {%- endfor %}
+
+    @unittest.skip('This has not yet been implemented')
+    def test_register_write_context_manager(self):
+        """
+        Test the read modify write context manager
+        """
+
     def test_register_write_fields(self):
         """
         Walk the register map and check every register write_fields method
