--- a/src/peakrdl_python/templates/addrmap.py.jinja
+++ b/src/peakrdl_python/templates/addrmap.py.jinja
@@ -243,6 +243,8 @@ class {{get_fully_qualified_type_name(node)}}_cls(AddressMap):
             '{{child_node.inst_name}}':'{{safe_node_name(child_node)}}',
             {%- elif isinstance(child_node, systemrdlMemNode) %}
             '{{child_node.inst_name}}':'{{safe_node_name(child_node)}}',
+            {%- elif isinstance(child_node, systemrdlSignalNode) %}
+            # doing nothing with signal node: {{child_node.inst_name}}
             {% else %}
             {{ raise_template_error('unexpected type') }}
             {%- endif %}
