--- a/src/peakrdl_python/templates/addrmap_tb.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_tb.py.jinja
@@ -10,7 +10,7 @@ import random
 from itertools import combinations
 import math
 
-from ..lib import CallbackSet
+from ..lib import CallbackSet, RegisterWriteVerifyError
 
 from ..reg_model.{{top_node.type_name}} import {{top_node.type_name}}_cls
 
@@ -597,11 +597,87 @@ class {{top_node.type_name}}_TestCase(unittest.TestCase):
         {%- endif %}
         {%- endfor %}
 
-    @unittest.skip('This has not yet been implemented')
     def test_register_write_context_manager(self):
         """
         Test the read modify write context manager
         """
+        def write_field_cominbinations(reg, writable_fields):
+            with patch(__name__ + '.' + 'write_addr_space') as write_callback_mock, \
+                patch(__name__ + '.' + 'read_addr_space', return_value=0) as read_callback_mock:
+                for num_parm in range(1, len(writable_fields) + 1):
+                    for fields_to_write in combinations(writable_fields, num_parm):
+                        field_values = {}
+                        expected_value = 0
+                        for field_str in fields_to_write:
+                            field = getattr(reg, field_str)
+                            if hasattr(field, 'enum_cls'):
+                                rand_enum_value = random.choice(list(field.enum_cls))
+                                rand_field_value = rand_enum_value.value
+                                field_values[field_str] = rand_enum_value
+                            else:
+                                rand_field_value = random.randrange(0, field.max_value + 1)
+                                field_values[field_str] = rand_field_value
+
+                            if field.msb == field.high:
+                                expected_value = ( expected_value & field.inverse_bitmask ) | (rand_field_value << field.low)
+                            elif field.msb == field.low:
+                                expected_value = ( expected_value & field.inverse_bitmask ) | (self._reverse_bits(value=rand_field_value, number_bits=field.width) << field.low)
+                            else:
+                                raise RuntimeError('invalid msb/lsb high/low combination')
+
+                        # read/write without verify
+                        read_callback_mock.return_value = 0
+                        with reg.single_read_modify_write(verify=False) as reg_session:
+                            for field_name, field_value in field_values.items():
+                                field = getattr(reg_session, field_name)
+                                field.write(field_value)
+
+                        write_callback_mock.assert_called_once_with(
+                                addr=reg.address,
+                                width=reg.width,
+                                accesswidth=reg.accesswidth,
+                                data=expected_value)
+                        read_callback_mock.assert_called_once()
+                        write_callback_mock.reset_mock()
+                        read_callback_mock.reset_mock()
+
+                        # read/write/verify pass
+                        with reg.single_read_modify_write(verify=True) as reg_session:
+                            for field_name, field_value in field_values.items():
+                                field = getattr(reg_session, field_name)
+                                field.write(field_value)
+                            read_callback_mock.return_value = expected_value
+
+                        write_callback_mock.assert_called_once_with(
+                                addr=reg.address,
+                                width=reg.width,
+                                accesswidth=reg.accesswidth,
+                                data=expected_value)
+                        self.assertEqual(read_callback_mock.call_count, 2)
+                        write_callback_mock.reset_mock()
+                        read_callback_mock.reset_mock()
+
+                        # read/write/verify pass
+                        with self.assertRaises(RegisterWriteVerifyError) as context:
+                            with reg.single_read_modify_write(verify=True) as reg_session:
+                                for field_name, field_value in field_values.items():
+                                    field = getattr(reg_session, field_name)
+                                    field.write(field_value)
+                                read_callback_mock.return_value = expected_value ^ reg_session.max_value
+
+                        write_callback_mock.reset_mock()
+                        read_callback_mock.reset_mock()
+
+        {%- for node in top_node.descendants(unroll=True) -%}
+        {%- if isinstance(node, systemrdlRegNode) %}
+        {% if node.has_sw_writable and node.has_sw_readable %}
+        write_field_cominbinations(reg=self.dut.{{'.'.join(get_python_path_segments(node))}},
+                           writable_fields = [ {% for field in get_reg_writable_fields(node) -%}
+                                               '{{ safe_node_name(field) }}' {%- if not loop.last -%},{%- endif %}
+                                               {% endfor -%} ])
+        {%- endif %}
+        {%- endif %}
+        {%- endfor %}
 
     def test_register_write_fields(self):
         """
