--- a/src/peakrdl_python/templates/addrmap_tb.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_tb.py.jinja
@@ -560,18 +560,22 @@ class {{top_node.type_name}}_TestCase(unittest.TestCase):
         # a random value for each field
         rand_reg_value = random.randrange(0, {{get_reg_max_value_hex_string(node)}} + 1)
         {%- for field in node.children() %}
-        {%- if field.is_sw_readable -%}
-        {%- if 'encode' in field.list_properties() %}
+            {% if isinstance(field, systemrdlFieldNode) %}
+                {% if field.is_sw_readable %}
+                    {% if 'encode' in field.list_properties() %}
         rand_field_value = random.choice(list(self.dut.{{'.'.join(get_python_path_segments(field))}}.enum_cls)).value
-        {%- else %}
+                    {% else %}
         rand_field_value = random.randrange(0, {{ get_field_max_value_hex_string(field) }} + 1)
-        {%- endif %}
-        {% if field.msb == field.high -%}
+                    {% endif %}
+                    {% if field.msb == field.high %}
         rand_reg_value = (rand_reg_value & {{get_field_inv_bitmask_hex_string(field)}}) | (rand_field_value << {{ field.low }})
-        {% else -%}
+                    {% else %}
         rand_reg_value = (rand_reg_value & {{get_field_inv_bitmask_hex_string(field)}}) | (self._reverse_bits(value=rand_field_value, number_bits={{field.width}}) << {{ field.low }})
-        {% endif -%}
-        {%- endif %}
+                    {% endif %}
+                {% endif %}
+            {% else %}
+            # skipping {{field.inst_name}}
+            {% endif %}
         {% endfor %}
         with patch(__name__ + '.' + 'write_addr_space') as write_callback_mock, \
              patch(__name__ + '.' + 'read_addr_space', return_value=rand_reg_value) as read_callback_mock:
@@ -579,8 +583,10 @@ class {{top_node.type_name}}_TestCase(unittest.TestCase):
             # first read the fields using the "normal" method, then compare the result to reading
             # via the context manager
             reference_read_fields = { {% for field in node.children() -%}
+                                      {%- if isinstance(field, systemrdlFieldNode) -%}
                                       {%- if field.is_sw_readable %}
                                       '{{ field.inst_name }}' : self.dut.{{'.'.join(get_python_path_segments(field))}}.read(){%- if not loop.last -%}, {%- endif %}
+                                      {%- endif -%}
                                       {%- endif -%}
                                       {%- endfor %}
                                     }
@@ -592,9 +598,11 @@ class {{top_node.type_name}}_TestCase(unittest.TestCase):
             with self.dut.{{'.'.join(get_python_path_segments(node))}}.single_read() as reg_context:
             {%- endif -%}
                 {% for field in node.children() -%}
+                {%- if isinstance(field, systemrdlFieldNode) -%}
                 {%- if field.is_sw_readable %}
                 self.assertEqual(reference_read_fields['{{ field.inst_name }}'],
                                  reg_context.get_child_by_system_rdl_name('{{ field.inst_name }}').read())
+                {%- endif -%}
                 {%- endif -%}
                 {%- endfor %}
 
