Resolved the warnings about test cases by using the IsolatedAsyncioTestCase test case

--- a/src/peakrdl_python/templates/addrmap_tb.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_tb.py.jinja
@@ -80,7 +80,7 @@ from ..reg_model.{{top_node.type_name}} import {{top_node.type_name}}_cls
 if sys.version_info < (3, 8):
     TestCaseBase = asynctest.TestCase
 else:
-    TestCaseBase = unittest.TestCase
+    TestCaseBase = unittest.IsolatedAsyncioTestCase
 {% else %}
 TestCaseBase = unittest.TestCase
 {% endif %}
