--- a/src/peakrdl_python/templates/addrmap.py.jinja
+++ b/src/peakrdl_python/templates/addrmap.py.jinja
@@ -7,7 +7,13 @@ from typing import Optional
 from typing import Union
 from typing import cast
 from typing import Dict
+{% if asyncoutput -%}
+from typing import AsyncGenerator
+{% else %}
 from typing import Generator
+{% endif %}
+
+
 from contextlib import {% if asyncoutput %}async{% endif %}contextmanager
 
 from ..lib import AddressMap, RegFile, Memory
@@ -34,7 +40,11 @@ from ..lib import FieldReadOnly, FieldWriteOnly, FieldReadWrite, Field
 from ..lib import FieldSizeProps, FieldMiscProps
 from ..lib import ReadableRegister, WritableRegister
 from ..lib import ReadableRegisterArray, WritableRegisterArray
-from ..lib import CallbackSet
+{% if asyncoutput %}
+from ..lib import AysncCallbackSet
+{% else %}
+from ..lib import NormalCallbackSet
+{% endif %}
 
 
 {% from 'addrmap_field.py.jinja' import field_class with context %}
@@ -99,8 +109,10 @@ class {{get_fully_qualified_type_name(node)}}_cls(RegFile):
 
     __slots__ : List[str] = [{%- for child_node in node.children(unroll=False) -%}'__{{child_node.inst_name}}'{% if not loop.last %}, {% endif %}{%- endfor %}]
 
+    {% if asyncoutput %}AysncCallbackSet{% else %}NormalCallbackSet{% endif %}
+
     def __init__(self,
-                 callbacks: CallbackSet,
+                 callbacks: {% if asyncoutput %}AysncCallbackSet{% else %}NormalCallbackSet{% endif %},
                  address: int,
                  logger_handle:str,
                  inst_name:str,
@@ -176,7 +188,7 @@ class {{get_fully_qualified_type_name(node)}}_array_cls(RegFileArray):
                  address: int,
                  length: int,
                  stride: int,
-                 callbacks: CallbackSet):
+                 callbacks: {% if asyncoutput %}AysncCallbackSet{% else %}NormalCallbackSet{% endif %}):
 
         elements = tuple([{{get_fully_qualified_type_name(node)}}_cls(callbacks=callbacks,address=address+(index * stride),
                           logger_handle=f'{logger_handle}.{inst_name}[{index:d}]',
@@ -202,10 +214,10 @@ class {{get_fully_qualified_type_name(node)}}_cls(AddressMap):
     __slots__ : List[str] = [{%- for child_node in node.children(unroll=False) -%}{%- if isinstance(child_node, systemrdlRegNode) or isinstance(child_node, systemrdlRegfileNode) or isinstance(child_node, systemrdlAddrmapNode) or isinstance(child_node, systemrdlMemNode) -%}'__{{child_node.inst_name}}'{% if not loop.last %}, {% endif %}{% endif %}{%- endfor %}]
 
     def __init__(self,
-                 callbacks: CallbackSet,
+                 callbacks: {% if asyncoutput %}AysncCallbackSet{% else %}NormalCallbackSet{% endif %},
                  address:int {%- if node == top_node -%}={{top_node.absolute_address}}{%- endif -%},
                  logger_handle:str {%- if node == top_node -%}='reg_model.{{top_node.get_path()}}'{%- endif -%},
-                 inst_name{%- if node == top_node -%}='{{node.inst_name}}'{%- endif -%},
+                 inst_name:str{%- if node == top_node -%}='{{node.inst_name}}'{%- endif -%},
                  parent:Optional[AddressMap]=None):
 
         super().__init__(callbacks=callbacks,
@@ -285,7 +297,7 @@ class {{get_fully_qualified_type_name(node)}}_array_cls(AddressMapArray):
                  address: int,
                  length: int,
                  stride: int,
-                 callbacks: CallbackSet):
+                 callbacks: {% if asyncoutput %}AysncCallbackSet{% else %}NormalCallbackSet{% endif %}):
 
         elements = tuple([{{get_fully_qualified_type_name(node)}}_cls(callbacks=callbacks,address=address+(index * stride),
                           logger_handle=f'{logger_handle}.{inst_name}[{index:d}]',
@@ -301,7 +313,7 @@ class {{get_fully_qualified_type_name(node)}}_array_cls(AddressMapArray):
 {%- endmacro %}
 
 {%- macro child_getter(node, getter_name, child_type, child_rdltype) %}
-    def {{getter_name}}(self, unroll=False) -> Iterator[Union[{{child_type}},Tuple[{{child_type}},...]]]:
+    def {{getter_name}}(self, unroll:bool=False) -> Iterator[Union[{{child_type}},Tuple[{{child_type}},...]]]:
         """
         generator that produces all the {{child_type}} children of this node
         """
@@ -371,7 +383,7 @@ class {{get_fully_qualified_enum_type(enum_needed, top_node.parent)}}_enumcls(In
 
 if __name__ == '__main__':
     # dummy functions to demonstrate the class
-    def read_addr_space(addr: int, width: int, accesswidth: int) -> int:
+    {% if asyncoutput %}async {% endif %}def read_addr_space(addr: int, width: int, accesswidth: int) -> int:
         """
         Callback to simulate the operation of the package, everytime the read is called, it will
         request the user input the value to be read back.
@@ -389,7 +401,7 @@ if __name__ == '__main__':
         assert isinstance(accesswidth, int)
         return int(input('value to read from address:0x%X'%addr))
 
-    def write_addr_space(addr: int, width: int, accesswidth: int, data: int) -> None:
+    {% if asyncoutput %}async {% endif %}def write_addr_space(addr: int, width: int, accesswidth: int, data: int) -> None:
         """
         Callback to simulate the operation of the package, everytime the read is called, it will
         request the user input the value to be read back.
@@ -410,5 +422,5 @@ if __name__ == '__main__':
         print('write data:0x%X to address:0x%X'%(data, addr))
 
     # create an instance of the class
-    {{top_node.inst_name}} = {{get_fully_qualified_type_name(top_node)}}_cls(callbacks = CallbackSet(read_callback=read_addr_space,
+    {{top_node.inst_name}} = {{get_fully_qualified_type_name(top_node)}}_cls(callbacks = {% if asyncoutput %}AysncCallbackSet{% else %}NormalCallbackSet{% endif %}(read_callback=read_addr_space,
                                                                                                      write_callback=write_addr_space))
