--- a/src/peakrdl_python/templates/addrmap_register.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_register.py.jinja
@@ -16,7 +16,7 @@ class {{get_fully_qualified_type_name(node)}}_cls(Reg{% if asyncoutput %}Async{%
     __slots__ : List[str] = [{%- for child_node in node.children(unroll=False) -%}'__{{child_node.inst_name}}'{% if not loop.last %}, {% endif %}{%- endfor %}]
 
     def __init__(self,
-                 callbacks: CallbackSet,
+                 callbacks: {% if asyncoutput %}AysncCallbackSet{% else %}NormalCallbackSet{% endif %},
                  address: int,
                  logger_handle: str,
                  inst_name: str,
@@ -50,7 +50,8 @@ class {{get_fully_qualified_type_name(node)}}_cls(Reg{% if asyncoutput %}Async{%
         {%- endfor %}
 
     {% if node.has_sw_readable %}
-    {% if asyncoutput %}async {% endif %}def read_fields(self):
+    {% if uses_enum %}IntEnum, {% endif %}
+    {% if asyncoutput %}async {% endif %}def read_fields(self) -> Dict[str, Union[bool, {% if uses_enum %}IntEnum, {% endif %} int]]: # type: ignore[override]
         """
         read the register and return a dictionary of the field values
         """
@@ -78,14 +79,22 @@ class {{get_fully_qualified_type_name(node)}}_cls(Reg{% if asyncoutput %}Async{%
         {% endfor %}
 
     {# context manager #}
+    @{% if asyncoutput %}async{% endif %}contextmanager
+    {% if asyncoutput %}async {% endif %}def single_read(self) -> {% if asyncoutput %}AsyncGenerator['{{get_fully_qualified_type_name(node)}}_cls', None]{% else %}Generator['{{get_fully_qualified_type_name(node)}}_cls', None, None]{% endif %}:
+        """
+        Context Manager to do multiple accesses using a single read operation
+        """
+        {% if asyncoutput %}async {% endif %}with super().single_read() as reg:
+           yield cast('{{get_fully_qualified_type_name(node)}}_cls',reg)
+
     {% if node.has_sw_writable %}
     @{% if asyncoutput %}async{% endif %}contextmanager
-    {% if asyncoutput %}async {% endif %}def single_read_modify_write(self, verify:bool = False, skip_write: bool = False) -> Generator['{{get_fully_qualified_type_name(node)}}_cls', None, None]:
+    {% if asyncoutput %}async {% endif %}def single_read_modify_write(self, verify:bool = False, skip_write: bool = False) -> {% if asyncoutput %}AsyncGenerator['{{get_fully_qualified_type_name(node)}}_cls', None]{% else %}Generator['{{get_fully_qualified_type_name(node)}}_cls', None, None]{% endif %}:
         """
         Context Manager to do multiple accesses using a single read/modify write operation
         """
         {% if asyncoutput %}async {% endif %}with super().single_read_modify_write(verify=verify, skip_write=skip_write) as reg:
-           yield reg
+           yield cast('{{get_fully_qualified_type_name(node)}}_cls',reg)
     {% endif %}
 
 
@@ -102,7 +111,7 @@ class {{get_fully_qualified_type_name(node)}}_cls(Reg{% if asyncoutput %}Async{%
         {% endfor %}
 
     {% if node.has_sw_readable %}
-    {% if asyncoutput %}async {% endif %}def write_fields(self, **kwargs) -> None:  # type
+    {% if asyncoutput %}async {% endif %}def write_fields(self, **kwargs) -> None:  # type: ignore[no-untyped-def]
         """
         Do a read-modify-write to the register, updating any field included in
         the arguments
@@ -189,7 +198,7 @@ class {{get_fully_qualified_type_name(node)}}_array_cls(Reg{% if asyncoutput %}A
                  address: int,
                  length: int,
                  stride: int,
-                 callbacks: CallbackSet):
+                 callbacks: {% if asyncoutput %}AysncCallbackSet{% else %}NormalCallbackSet{% endif %}):
 
 
         elements = tuple([{{get_fully_qualified_type_name(node)}}_cls(callbacks=callbacks,address=address+(index * stride),
