--- a/src/peakrdl_python/templates/addrmap_tb.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_tb.py.jinja
@@ -1,4 +1,5 @@
 {% include "header_tb.py.jinja" with context %}
+from typing import List, Union
 from array import array as Array
 {% if asyncoutput %}
 import sys
@@ -17,27 +18,40 @@ import random
 from itertools import combinations
 import math
 
-from ..lib import CallbackSet, RegisterWriteVerifyError
+from ..lib import RegisterWriteVerifyError
+{% if asyncoutput %}
+from ..lib import AysncCallbackSet
+{% else %}
+from ..lib import NormalCallbackSet
+{% endif %}
+
 
 from ..reg_model.{{top_node.type_name}} import {{top_node.type_name}}_cls
+{% if asyncoutput %}
+from ..lib import FieldAsyncReadOnly, FieldAsyncWriteOnly, FieldAsyncReadWrite
+from ..lib import WritableAsyncRegister, ReadableAsyncRegister, RegAsyncReadWrite
+{% else %}
+from ..lib import FieldReadOnly, FieldWriteOnly, FieldReadWrite
+from ..lib import WritableRegister, ReadableRegister, RegReadWrite
+{% endif %}
 
 # dummy functions to support the test cases, note that these are not used as
 # they get patched
-{% if asyncoutput %}async {% endif %}def read_addr_space(addr: int, width: int, accesswidth: int):
+{% if asyncoutput %}async {% endif %}def read_addr_space(addr: int, width: int, accesswidth: int) -> int:
     assert isinstance(addr, int)
     assert isinstance(width, int)
     assert isinstance(accesswidth, int)
     {% if asyncoutput %}await asyncio.sleep(1) {% endif %}
     return 0
 
-{% if asyncoutput %}async {% endif %}def write_addr_space(addr: int, width: int, accesswidth: int,  data: int):
+{% if asyncoutput %}async {% endif %}def write_addr_space(addr: int, width: int, accesswidth: int,  data: int) -> None:
     assert isinstance(addr, int)
     assert isinstance(width, int)
     assert isinstance(accesswidth, int)
     assert isinstance(data, int)
     {% if asyncoutput %}await asyncio.sleep(1) {% endif %}
 
-{% if asyncoutput %}async {% endif %}def read_callback(addr: int, width: int, accesswidth: int):
+{% if asyncoutput %}async {% endif %}def read_callback(addr: int, width: int, accesswidth: int) -> int:
     return {% if asyncoutput %}await {% endif %}read_addr_space(addr=addr, width=width, accesswidth=accesswidth)
 
 {% if asyncoutput %}async {%endif %}def read_block_addr_space(addr: int, width: int, accesswidth: int, length:int) -> Array:
@@ -60,20 +74,20 @@ from ..reg_model.{{top_node.type_name}} import {{top_node.type_name}}_cls
     {% if asyncoutput %}await asyncio.sleep(1) {% endif %}
     return Array(typecode, [0 for x in range(length)])
 
-{% if asyncoutput %}async {%endif %}def read_block_callback(addr: int, width: int, accesswidth: int, length: int):
+{% if asyncoutput %}async {%endif %}def read_block_callback(addr: int, width: int, accesswidth: int, length: int) -> Array:
     return {% if asyncoutput %}await {% endif %}read_block_addr_space(addr=addr, width=width, accesswidth=accesswidth, length=length)
 
-{% if asyncoutput %}async {%endif %}def write_callback(addr: int, width: int, accesswidth: int,  data: int):
+{% if asyncoutput %}async {%endif %}def write_callback(addr: int, width: int, accesswidth: int,  data: int) -> None:
     {% if asyncoutput %}await {% endif %}write_addr_space(addr=addr, width=width, accesswidth=accesswidth, data=data)
 
-{% if asyncoutput %}async {%endif %}def write_block_addr_space(addr: int, width: int, accesswidth: int,  data: Array):
+{% if asyncoutput %}async {%endif %}def write_block_addr_space(addr: int, width: int, accesswidth: int,  data: Array) -> None:
     assert isinstance(addr, int)
     assert isinstance(width, int)
     assert isinstance(accesswidth, int)
     assert isinstance(data, Array)
     {% if asyncoutput %}await asyncio.sleep(1) {% endif %}
 
-{% if asyncoutput %}async {%endif %}def write_block_callback(addr: int, width: int, accesswidth: int,  data: Array):
+{% if asyncoutput %}async {%endif %}def write_block_callback(addr: int, width: int, accesswidth: int,  data: Array) -> None:
     {% if asyncoutput %}await {% endif %}write_block_addr_space(addr=addr, width=width, accesswidth=accesswidth, data=data)
 
 {% if asyncoutput %}
@@ -87,8 +101,8 @@ TestCaseBase = unittest.TestCase
 
 class {{top_node.type_name}}_TestCase(TestCaseBase):
 
-    def setUp(self):
-        self.dut = {{top_node.type_name}}_cls(CallbackSet(read_callback=read_callback,
+    def setUp(self) -> None:
+        self.dut = {{top_node.type_name}}_cls({% if asyncoutput %}AysncCallbackSet{% else %}NormalCallbackSet{% endif %}(read_callback=read_callback,
                                                           write_callback=write_callback))
 
     @staticmethod
@@ -108,7 +122,7 @@ class {{top_node.type_name}}_TestCase(TestCaseBase):
                 result |= 1 << (number_bits - 1 - i)
         return result
 
-    def test_inst_name(self):
+    def test_inst_name(self)  -> None:
         """
         Walk the address map and check the inst name has been correctly populated
         """
@@ -121,7 +135,7 @@ class {{top_node.type_name}}_TestCase(TestCaseBase):
         {% endif %}
         {% endfor %}
 
-    def test_register_properties(self):
+    def test_register_properties(self)  -> None:
         """
         Walk the address map and check the address, size and accesswidth of every register is
         correct
@@ -134,7 +148,7 @@ class {{top_node.type_name}}_TestCase(TestCaseBase):
             {%- endif %}
         {%- endfor %}
 
-    def test_memory_properties(self):
+    def test_memory_properties(self)  -> None:
         """
         Walk the address map and check the address, size and accesswidth of every memory is
         correct
@@ -148,7 +162,7 @@ class {{top_node.type_name}}_TestCase(TestCaseBase):
             {%- endif %}
         {%- endfor %}
 
-    def test_field_properties(self):
+    def test_field_properties(self)  -> None:
         """
         walk the address map and check:
         - that the lsb and msb of every field is correct
@@ -177,7 +191,7 @@ class {{top_node.type_name}}_TestCase(TestCaseBase):
             {%- endif -%}
         {%- endfor %}
 
-    {% if asyncoutput %}async {% endif %}def test_register_read_and_write(self):
+    {% if asyncoutput %}async {% endif %}def test_register_read_and_write(self) -> None:
         """
         Walk the register map and check every register can be read and written to correctly
         """
@@ -269,7 +283,7 @@ class {{top_node.type_name}}_TestCase(TestCaseBase):
             {%- else %}
             # test that a non-writable register has no write method and attempting one generates and error
             with self.assertRaises(AttributeError):
-                {% if asyncoutput %}await {%endif %}self.dut.{{'.'.join(get_python_path_segments(node))}}.write(0)
+                {% if asyncoutput %}await {%endif %}self.dut.{{'.'.join(get_python_path_segments(node))}}.write(0) # type: ignore[attr-defined]
             {%- endif %}
 
             # check the read has not been called in the write test
@@ -277,7 +291,7 @@ class {{top_node.type_name}}_TestCase(TestCaseBase):
             {%- endif %}
         {%- endfor %}
 
-    {% if asyncoutput %}async {% endif %}def test_int_field_read_and_write(self):
+    {% if asyncoutput %}async {% endif %}def test_int_field_read_and_write(self) -> None:
         """
         Check the ability to read and write to integer (non-eumn) fields
         """
@@ -399,7 +413,7 @@ class {{top_node.type_name}}_TestCase(TestCaseBase):
     {%- endfor %}
 
     {% if uses_enum %}
-    {% if asyncoutput %}async {% endif %}def test_enum_field_read_and_write(self):
+    {% if asyncoutput %}async {% endif %}def test_enum_field_read_and_write(self) -> None:
         """
         Check the ability to read and write to enum fields
         """
@@ -514,7 +528,7 @@ class {{top_node.type_name}}_TestCase(TestCaseBase):
     {%- endfor %}
     {%- endif %}
 
-    {% if asyncoutput %}async {% endif %}def test_register_read_fields(self):
+    {% if asyncoutput %}async {% endif %}def test_register_read_fields(self) -> None:
         """
         Walk the register map and check every register read_fields method
         """
@@ -571,7 +585,7 @@ class {{top_node.type_name}}_TestCase(TestCaseBase):
         {%- endif %}
         {%- endfor %}
 
-    {% if asyncoutput %}async {% endif %}def test_register_read_context_manager(self):
+    {% if asyncoutput %}async {% endif %}def test_register_read_context_manager(self) -> None:
         """
         Walk the register map and check every register read_fields method
         """
@@ -625,7 +639,7 @@ class {{top_node.type_name}}_TestCase(TestCaseBase):
                 {%- if isinstance(field, systemrdlFieldNode) -%}
                 {%- if field.is_sw_readable %}
                 self.assertEqual(reference_read_fields['{{ field.inst_name }}'],
-                                 {% if asyncoutput %} await {% endif %}reg_context.get_child_by_system_rdl_name('{{ field.inst_name }}').read())
+                                 {% if asyncoutput %} await {% endif %}reg_context.get_child_by_system_rdl_name('{{ field.inst_name }}').read())  # type: ignore[attr-defined]
                 {%- endif -%}
                 {%- endif -%}
                 {%- endfor %}
@@ -637,11 +651,11 @@ class {{top_node.type_name}}_TestCase(TestCaseBase):
         {%- endif %}
         {%- endfor %}
 
-    {% if asyncoutput %}async {% endif %}def test_register_write_context_manager(self):
+    {% if asyncoutput %}async {% endif %}def test_register_write_context_manager(self) -> None:
         """
         Test the read modify write context manager
         """
-        {% if asyncoutput %}async {% endif %}def write_field_cominbinations(reg, writable_fields):
+        {% if asyncoutput %}async {% endif %}def write_field_cominbinations(reg: Reg{% if asyncoutput %}Async{% endif %}ReadWrite, writable_fields:List[str]) -> None:
             with patch(__name__ + '.' + 'write_addr_space') as write_callback_mock, \
                 patch(__name__ + '.' + 'read_addr_space', return_value=0) as read_callback_mock:
                 for num_parm in range(1, len(writable_fields) + 1):
@@ -719,11 +733,11 @@ class {{top_node.type_name}}_TestCase(TestCaseBase):
         {%- endif %}
         {%- endfor %}
 
-    {% if asyncoutput %}async {% endif %}def test_register_write_fields(self):
+    {% if asyncoutput %}async {% endif %}def test_register_write_fields(self) -> None:
         """
         Walk the register map and check every register write_fields method
         """
-        {% if asyncoutput %}async {% endif %}def write_field_cominbinations(reg, writable_fields):
+        {% if asyncoutput %}async {% endif %}def write_field_cominbinations(reg: Writable{% if asyncoutput %}Async{% endif %}Register, writable_fields:List[str]) -> None:
             with patch(__name__ + '.' + 'write_addr_space') as write_callback_mock, \
                 patch(__name__ + '.' + 'read_addr_space', return_value=0) as read_callback_mock:
                 for num_parm in range(1, len(writable_fields) + 1):
@@ -893,7 +907,7 @@ class {{top_node.type_name}}_TestCase(TestCaseBase):
         {%- endfor %}
     {%- endif %}
 
-    def test_adding_attributes(self):
+    def test_adding_attributes(self) -> None:
         """
         Walk the address map and attempt to set a new value on each node
 
@@ -906,7 +920,9 @@ class {{top_node.type_name}}_TestCase(TestCaseBase):
         # doing nothing with signal node: {{node.inst_name}}
         {% else %}
         with self.assertRaises(AttributeError):
-            self.dut.{{'.'.join(get_python_path_segments(node))}}.cppkbrgmgeloagvfgjjeiiushygirh = 1
+            # this line is trying to set an illegal value so by definition should fail the type
+            # checks
+            self.dut.{{'.'.join(get_python_path_segments(node))}}.cppkbrgmgeloagvfgjjeiiushygirh = 1 # type: ignore[attr-defined]
         {% endif %}
         {%- endfor %}
 
@@ -970,10 +986,22 @@ class {{top_node.type_name}}_TestCase(TestCaseBase):
         self.assertCountEqual(expected_memories, memories)
     {% endmacro %}
 
-    def test_traversal_iterators(self):
+    def test_traversal_iterators(self) -> None:
         """
         Walk the address map and check that the iterators for each node as as expected
         """
+        {% if asyncoutput %}
+        expected_writable_fields: List[Union[FieldAsyncWriteOnly, FieldAsyncReadWrite]]
+        {% else %}
+        expected_writable_fields: List[Union[FieldWriteOnly, FieldReadWrite]]
+        {% endif %}
+
+        {% if asyncoutput %}
+        expected_readable_fields: List[Union[FieldAsyncReadOnly, FieldAsyncReadWrite]]
+        {% else %}
+        expected_readable_fields: List[Union[FieldReadOnly, FieldReadWrite]]
+        {% endif %}
+
         {%- for node in top_node.descendants(unroll=True) %}
             {%- if isinstance(node, systemrdlRegNode) %}
                 {# a register can only have fields beneath it #}
@@ -1021,7 +1049,7 @@ class {{top_node.type_name}}_TestCase(TestCaseBase):
             {% endif %}
         {%- endfor %}
 
-    def test_name_map(self):
+    def test_name_map(self) -> None:
         """
         Check that the function for getting a node by its original systemRDL name works
         """
@@ -1037,14 +1065,14 @@ class {{top_node.type_name}}_TestCase(TestCaseBase):
 
 class {{top_node.type_name}}_TestCase_BlockAccess(TestCaseBase):
 
-    def setUp(self):
-        self.dut = {{top_node.type_name}}_cls(CallbackSet(read_callback=read_callback,
+    def setUp(self) -> None:
+        self.dut = {{top_node.type_name}}_cls({% if asyncoutput %}AysncCallbackSet{% else %}NormalCallbackSet{% endif %}(read_callback=read_callback,
                                                           write_callback=write_callback,
                                                           read_block_callback=read_block_callback,
                                                           write_block_callback=write_block_callback))
 
     {% if uses_memory %}
-    {% if asyncoutput %}async {% endif %}def test_memory_read_and_write(self):
+    {% if asyncoutput %}async {% endif %}def test_memory_read_and_write(self) -> None:
         """
         Walk the register map and check every register can be read and written to correctly
         """
