--- a/src/peakrdl_python/templates/addrmap.py.jinja
+++ b/src/peakrdl_python/templates/addrmap.py.jinja
@@ -1,5 +1,5 @@
 {% include "header.py.jinja" with context %}
-{% if uses_enum %}from enum import IntEnum, unique{% endif %}
+{% if uses_enum %}from enum import EnumMeta, IntEnum, unique{% endif %}
 from typing import Tuple
 from typing import Iterator
 from typing import List
@@ -197,7 +197,7 @@ class {{get_fully_qualified_type_name(node)}}_array_cls(RegFileArray):
         super().__init__(logger_handle=logger_handle, inst_name=inst_name,
                          parent=parent, elements=elements)
 
-    def __getitem__(self, item) -> Union[{{get_fully_qualified_type_name(node)}}_cls, Tuple[{{get_fully_qualified_type_name(node)}}_cls, ...]]:
+    def __getitem__(self, item:Union[int, slice]) -> Union[{{get_fully_qualified_type_name(node)}}_cls, Tuple[{{get_fully_qualified_type_name(node)}}_cls, ...]]:
         # this cast is OK because an explict typing check was done in the __init__
         return cast(Union[{{get_fully_qualified_type_name(node)}}_cls, Tuple[{{get_fully_qualified_type_name(node)}}_cls, ...]], super().__getitem__(item))
     {%- endif %}
@@ -306,7 +306,7 @@ class {{get_fully_qualified_type_name(node)}}_array_cls(AddressMapArray):
         super().__init__(logger_handle=logger_handle, inst_name=inst_name,
                          parent=parent, elements=elements)
 
-    def __getitem__(self, item) -> Union[{{get_fully_qualified_type_name(node)}}_cls, Tuple[{{get_fully_qualified_type_name(node)}}_cls, ...]]:
+    def __getitem__(self, item:Union[int, slice]) -> Union[{{get_fully_qualified_type_name(node)}}_cls, Tuple[{{get_fully_qualified_type_name(node)}}_cls, ...]]:
         # this cast is OK because an explict typing check was done in the __init__
         return cast(Union[{{get_fully_qualified_type_name(node)}}_cls, Tuple[{{get_fully_qualified_type_name(node)}}_cls, ...]], super().__getitem__(item))
     {%- endif %}
